--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
    <link rel="stylesheet" href="">
-   <script defer src="./index.js"></script>
+
 </head>
 
-<body>
-
+<body style="background-color: black; margin:0;">
+   <h1 style="text-align: center; color:whitesmoke">КОНСОЛЬНАЯ ПРАКТИКА</h1>
 </body>
+<script defer src="./index.js"></script>
 
 </html>
